--- a/station/index.html
+++ b/station/index.html
@@ -57,6 +57,29 @@
 	<br/>
 </div>
 
+<script type="text/ng-template" id="partials/pager">
+	<ul class="pager ng-cloak">
+		<li ng-repeat="page in pages"
+			ng-class="{'disabled': !page.active, 'previous': page.type == 'prev', 'next': page.type == 'next'}"
+			ng-show="page.type == 'prev' || page.type == 'next'" ng-switch="page.type">
+			<a ng-switch-when="prev" ng-click="params.page(page.number)" href="">&laquo; Previous</a>
+
+			<a ng-switch-when="next" ng-click="params.page(page.number)" href="">Next &raquo;</a>
+		</li>
+		<div>
+			Seite <span ng-bind="params.page()"></span>
+		</div>
+		<li>
+			<div class="btn-group">
+				<button type="button" ng-class="{'active':params.count() == 10}" ng-click="params.count(10)" class="btn btn-default">10</button>
+				<button type="button" ng-class="{'active':params.count() == 25}" ng-click="params.count(25)" class="btn btn-default">25</button>
+				<button type="button" ng-class="{'active':params.count() == 50}" ng-click="params.count(50)" class="btn btn-default">50</button>
+				<button type="button" ng-class="{'active':params.count() == 100}" ng-click="params.count(100)" class="btn btn-default">100</button>
+			</div>
+		</li>
+	</ul>
+</script>
+
 <script type="text/ng-template" id="partials/start.html">
 
 	<div class="jumbotron">
@@ -82,19 +105,23 @@
 	<div ng-show="!loading">
 
 		<div class="row">
+			<div class="col-md-6 headline">
+				<h1>Personen</h1>
 
-			<div class="col-md-9 headline"><h1>Personen</h1>
+				<p>Anzahl <span ng-bind="tableParams.total()"></span></p>
+			</div>
 
-				<p>Anzahl <span ng-bind="tableParams.total()"></span></p></div>
+			<div class="col-md-3">
+				<button class="btn btn-default" ui-sref="person({id: 'new'})">Person anlegen</button>
+			</div>
 
 			<div class="col-md-3">
 				<div class="pull-right has-feedback">
 					<label>Suche</label>
 					<input type="text" ng-model="filter.text" placeholder="Suche" ng-enter="refilter()">
-					<span ng-show="filter.text.length>0" class="form-control-feedback clickable" ng-click="resetFilter()"><i class="glyphicon glyphicon-remove"></i></span>
+					<span ng-show="filter.text.length>0" class="form-control-feedback clickable" ng-click="resetFilter()"><i class="fa fa-remove"></i></span>
 				</div>
 			</div>
-
 		</div>
 
 		<!--<div class="row">-->
@@ -104,13 +131,13 @@
 		<!--<div class="col-md-3"><p><strong>Sorting:</strong> {{tableParams.sorting()|json}}</p></div>-->
 		<!--</div>-->
 
-		<table ng-table="tableParams" template-pagination="custom/pager" show-filter="false" class="table table-striped">
+		<table ng-table="tableParams" template-pagination="partials/pager" show-filter="false" class="table table-striped">
 			<tbody>
 			<tr ng-repeat="p in $data">
 				<td data-title="'Name'" filter="{ 'name': 'text' }" sortable="'name'" ng-bind="p.name"></td>
 				<td>
-					<span ng-click="remove(p)"><i class="fa fa-trash btn-right"></i></span>
-					<span ui-sref='person({id: p._id})'><i class="fa fa-edit btn-right"></i></span>
+					<span class="btn-right" ng-click="remove(p)" title="Person löschen"><i class="fa fa-trash"></i></span>
+					<span class="btn-right" ui-sref='person({id: p._id})' title="Person bearbeiten"><i class="fa fa-edit"></i></span>
 				</td>
 			</tr>
 			</tbody>
@@ -127,28 +154,32 @@
 	<div ng-show="!loading">
 
 		<div class="row">
+			<div class="col-md-6 headline">
+				<h1>Organisationen</h1>
 
-			<div class="col-md-9 headline"><h1>Organisationen</h1>
+				<p>Anzahl <span ng-bind="tableParams.total()"></span></p>
+			</div>
 
-				<p>Anzahl <span ng-bind="tableParams.total()"></span></p></div>
+			<div class="col-md-3">
+				<button class="btn btn-default" ui-sref="organisation({id: 'new'})">Organisation anlegen</button>
+			</div>
 
 			<div class="col-md-3">
 				<div class="pull-right has-feedback">
 					<label>Suche</label>
 					<input type="text" ng-model="filter.text" placeholder="Suche" ng-enter="refilter()">
-					<span ng-show="filter.text.length>0" class="form-control-feedback clickable" ng-click="resetFilter()"><i class="glyphicon glyphicon-remove"></i></span>
+					<span ng-show="filter.text.length>0" class="form-control-feedback clickable" ng-click="resetFilter()"><i class="fa fa-remove"></i></span>
 				</div>
 			</div>
-
 		</div>
 
-		<table ng-table="tableParams" template-pagination="custom/pager" show-filter="false" class="table table-striped">
+		<table ng-table="tableParams" template-pagination="partials/pager" show-filter="false" class="table table-striped">
 			<tbody>
 			<tr ng-repeat="p in $data">
 				<td data-title="'Name'" filter="{ 'name': 'text' }" sortable="'name'" ng-bind="p.name"></td>
 				<td>
-					<span ng-click="remove(p)"><i class="fa fa-trash btn-right"></i></span>
-					<span ui-sref='organisation({id: p._id})'><i class="fa fa-edit btn-right"></i></span>
+					<span class="btn-right" ng-click="remove(p)" title="Organisation löschen"><i class="fa fa-trash"></i></span>
+					<span class="btn-right" ui-sref='organisation({id: p._id})' title="Organisation bearbeiten"><i class="fa fa-edit"></i></span>
 				</td>
 			</tr>
 			</tbody>
@@ -159,13 +190,13 @@
 
 <script type="text/ng-template" id="partials/editor.html">
 
-	<h1><span ng-bind="modename"></span> bearbeiten</h1>
+	<h1><span ng-bind="modename"></span> <span ng-if="isNew">anlegen</span><span ng-if="!isNew">bearbeiten</span></h1>
 
 	<form role="form">
 
 		<div class="form-group">
 			<label for="name">Name</label>
-			<input type="text" class="form-control" id="name" placeholder="Enter name" ng-model="item.name">
+			<input type="text" class="form-control" id="name" placeholder="Name" ng-model="item.name">
 		</div>
 
 		<hr/>
@@ -174,8 +205,9 @@
 
 			<div class="form-group col-md-6">
 				<label>Aliase</label>
+
 				<div class="has-feedback">
-					<input type="text" class="form-control" placeholder="Aliases" ng-model="edit.aliases" ng-enter="addEntry('aliases', edit.aliases)">
+					<input type="text" class="form-control" placeholder="Aliase" ng-model="edit.aliases" ng-enter="addEntry('aliases', edit.aliases)">
 					<span ng-show="canAddEntry('aliases', edit.aliases)" class="glyphicon glyphicon-plus-sign form-control-feedback clickable" ng-click="addEntry('aliases', edit.aliases)"></span>
 				</div>
 				<div class="label-list">
@@ -184,9 +216,10 @@
 			</div>
 
 			<div class="form-group col-md-6">
-				<label>Tags</label>
+				<label>Schlagworte</label>
+
 				<div class="has-feedback">
-					<input type="text" class="form-control" placeholder="Tags" ng-model="edit.tags" ng-enter="addEntry('tags', edit.tags)">
+					<input type="text" class="form-control" placeholder="Schlagworte" ng-model="edit.tags" ng-enter="addEntry('tags', edit.tags)">
 					<span ng-show="canAddEntry('tags', edit.tags)" class="glyphicon glyphicon-plus-sign form-control-feedback clickable" ng-click="addEntry('tags', edit.tags)"></span>
 				</div>
 				<div class="label-list">
@@ -298,47 +331,43 @@
 	</div>
 
 	<div class="pull-right">
-		<button type="button" class="btn btn-primary" ng-click="save()">Speichern</button>
+		<button ng-if="!isNew" class="btn btn-primary" ng-click="save()">Aktualisieren</button>
+		<button ng-if="isNew" class="btn btn-primary" ng-click="create()">Anlegen</button>
 		<button type="button" class="btn btn-default" ng-click="back()">Abbruch</button>
 	</div>
 
 
 </script>
 
-<script type="text/ng-template" id="custom/pager">
-	<ul class="pager ng-cloak">
-		<li ng-repeat="page in pages"
-			ng-class="{'disabled': !page.active, 'previous': page.type == 'prev', 'next': page.type == 'next'}"
-			ng-show="page.type == 'prev' || page.type == 'next'" ng-switch="page.type">
-			<a ng-switch-when="prev" ng-click="params.page(page.number)" href="">&laquo; Previous</a>
-
-			<a ng-switch-when="next" ng-click="params.page(page.number)" href="">Next &raquo;</a>
-		</li>
-		<div>
-			Seite <span ng-bind="params.page()"></span>
-		</div>
-		<li>
-			<div class="btn-group">
-				<button type="button" ng-class="{'active':params.count() == 10}" ng-click="params.count(10)" class="btn btn-default">10</button>
-				<button type="button" ng-class="{'active':params.count() == 25}" ng-click="params.count(25)" class="btn btn-default">25</button>
-				<button type="button" ng-class="{'active':params.count() == 50}" ng-click="params.count(50)" class="btn btn-default">50</button>
-				<button type="button" ng-class="{'active':params.count() == 100}" ng-click="params.count(100)" class="btn btn-default">100</button>
-			</div>
-		</li>
-	</ul>
-</script>
-
 <script type="text/ng-template" id="partials/users.html">
 
-	<button class="btn btn-default" ui-sref="user({id: 'new'})">Benutzerin anlegen</button>
+	<div class="row">
+		<div class="col-md-6 headline">
+			<h1>Benutzerinnen</h1>
+
+			<p>Anzahl <span ng-bind="tableParams.total()"></span></p>
+		</div>
+
+		<div class="col-md-3">
+			<button class="btn btn-default" ui-sref="user({id: 'new'})">Benutzerin anlegen</button>
+		</div>
+
+		<div class="col-md-3">
+			<div class="pull-right has-feedback">
+				<label>Suche</label>
+				<input type="text" ng-model="filter.text" placeholder="Suche" ng-enter="refilter()">
+				<span ng-show="filter.text.length>0" class="form-control-feedback clickable" ng-click="resetFilter()"><i class="fa fa-remove"></i></span>
+			</div>
+		</div>
+	</div>
 
 	<table ng-table="tableParams" class="table table-striped">
 		<tbody>
 		<tr ng-repeat="p in $data">
 			<td data-title="'Name'" filter="{ 'name': 'text' }" sortable="'name'" ng-bind="p.name"></td>
 			<td>
-				<span ng-click="remove(p)"><i class="fa fa-trash btn-right"></i></span>
-				<span ui-sref='user({id: p._id})'><i class="fa fa-edit btn-right"></i></span>
+				<span class="btn-right" ng-click="remove(p)" title="Benutzerin löschen"><i class="fa fa-trash"></i></span>
+				<span class="btn-right" ui-sref='user({id: p._id})' title="Benutzerin bearbeiten"><i class="fa fa-edit"></i></span>
 			</td>
 		</tr>
 		</tbody>
@@ -391,9 +420,11 @@
 					</label>
 				</div>
 			</form>
-			<button ng-if="!isNew" class="btn btn-primary" ng-click="save()">Aktualisieren</button>
-			<button ng-if="isNew" class="btn btn-primary" ng-click="create()">Anlegen</button>
-			<button class="btn btn-default" ui-sref="users">Abbruch</button>
+			<div class="pull-right">
+				<button ng-if="!isNew" class="btn btn-primary" ng-click="save()">Aktualisieren</button>
+				<button ng-if="isNew" class="btn btn-primary" ng-click="create()">Anlegen</button>
+				<button class="btn btn-default" ui-sref="users">Abbruch</button>
+			</div>
 		</div>
 	</div>
 
@@ -402,7 +433,26 @@
 
 <script type="text/ng-template" id="partials/fields.html">
 
-	<button class="btn btn-default" ui-sref="field({id: 'new'})">Feld anlegen</button>
+	<div class="row">
+		<div class="col-md-6 headline">
+			<h1>Datenfelder</h1>
+
+			<p>Anzahl <span ng-bind="tableParams.total()"></span></p>
+		</div>
+
+		<div class="col-md-3">
+			<button class="btn btn-default" ui-sref="field({id: 'new'})">Datenfeld anlegen</button>
+		</div>
+
+		<div class="col-md-3">
+			<div class="pull-right has-feedback">
+				<label>Suche</label>
+				<input type="text" ng-model="filter.text" placeholder="Suche" ng-enter="refilter()">
+				<span ng-show="filter.text.length>0" class="form-control-feedback clickable" ng-click="resetFilter()"><i class="fa fa-remove"></i></span>
+			</div>
+		</div>
+	</div>
+
 
 	<table ng-table="tableParams" class="table table-striped">
 		<tbody>
@@ -411,8 +461,8 @@
 			<td data-title="'Schlüssel'" filter="{ 'key': 'text' }" sortable="'key'" ng-bind="p.key"></td>
 			<td data-title="'Format'" filter="{ 'format': 'text' }" sortable="'format'" ng-bind="p.format"></td>
 			<td>
-				<span ng-click="remove(p)"><i class="fa fa-trash btn-right"></i></span>
-				<span ui-sref="field({id: p._id})"><i class="fa fa-edit btn-right"></i></span>
+				<span class="btn-right" ng-click="remove(p)" title="Datenfeld löschen"><i class="fa fa-trash"></i></span>
+				<span class="btn-right" ui-sref='field({id: p._id})' title="Datenfeld bearbeiten"><i class="fa fa-edit"></i></span>
 			</td>
 		</tr>
 		</tbody>
@@ -445,9 +495,11 @@
 					</select>
 				</div>
 			</form>
-			<button ng-if="!isNew" class="btn btn-primary" ng-click="save()">Aktualisieren</button>
-			<button ng-if="isNew" class="btn btn-primary" ng-click="create()">Anlegen</button>
-			<button class="btn btn-default" ui-sref="users">Abbruch</button>
+			<div class="pull-right">
+				<button ng-if="!isNew" class="btn btn-primary" ng-click="save()">Aktualisieren</button>
+				<button ng-if="isNew" class="btn btn-primary" ng-click="create()">Anlegen</button>
+				<button class="btn btn-default" ui-sref="users">Abbruch</button>
+			</div>
 		</div>
 	</div>
 
@@ -455,17 +507,17 @@
 
 <script type="text/ng-template" id="partials/ask.html">
 
-<div class="modal-header">
-	<button type="button" class="close" ng-click="cancel()" aria-hidden="true">&times;</button>
-	<h4 class="modal-title">{{data.headline}}</h4>
-</div>
-<div class="modal-body">
-	<p>{{data.question}}</p>
-</div>
-<div class="modal-footer">
-	<button class="btn btn-primary" ng-click="ok()" translate>OK</button>
-	<button class="btn btn-warning" ng-click="cancel()" translate>Cancel</button>
-</div>
+	<div class="modal-header">
+		<button type="button" class="close" ng-click="cancel()" aria-hidden="true">&times;</button>
+		<h4 class="modal-title">{{data.headline}}</h4>
+	</div>
+	<div class="modal-body">
+		<p>{{data.question}}</p>
+	</div>
+	<div class="modal-footer">
+		<button class="btn btn-primary" ng-click="ok()" translate>OK</button>
+		<button class="btn btn-warning" ng-click="cancel()" translate>Cancel</button>
+	</div>
 
 </script>
 
