--- a/station/index.html
+++ b/station/index.html
@@ -443,8 +443,7 @@
 	</div>
 
 	<div class="modal-footer">
-		<button class="btn btn-primary" ng-click="ok(item)" translate>OK</button>
-		<button class="btn btn-warning" ng-click="cancel()" translate>Cancel</button>
+		<button class="btn btn-warning" ng-click="ok()" translate>Schliessen</button>
 	</div>
 </script>
 
@@ -656,7 +655,7 @@
 	</div>
 	<div class="modal-footer">
 		<button class="btn btn-primary" ng-click="ok()" translate>OK</button>
-		<button class="btn btn-warning" ng-click="cancel()" translate>Cancel</button>
+		<button class="btn btn-warning" ng-click="cancel()" translate>Abbruch</button>
 	</div>
 
 </script>
