backend: kein ok/cancel im info-dialog

--- a/station/index.html
+++ b/station/index.html
@@ -432,7 +432,7 @@
 <script type="text/ng-template" id="partials/relations-modal.html">
 
 	<div class="modal-header">
-		<button type="button" class="close" ng-click="cancel()" aria-hidden="true">&times;</button>
+		<button type="button" class="close" ng-click="ok()" aria-hidden="true">&times;</button>
 		<h4 class="modal-title">
 			Verbindungen {{data.item.name}}
 		</h4>
